# reference-speculative-decoding

./: .gitignore  pyproject.toml
src/speculative_decoding/: infer.py  main.py
src/speculative_decoding/ngram_assisted/: __init__.py  ngram_assisted.py  ngram_storage.py
src/speculative_decoding/sampling/: __init__.py  base_decoding.py  codec_base_decoding.py  codec_speculative_decoding.py  speculative_decoding.py
src/speculative_decoding/utils/: caching.py  logits_processor.py  printing.py
