[project]
name = "speculative-decoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich",
    "tqdm",
    "termcolor",
    "tokenizers>=0.19.1",
    "torch>=2.3.0",
    "transformers>=4.41.1",
    "accelerate>=0.30.1",
]
